# chatgpt-rs

./: Cargo.toml  README.md  RESPONSES_API.md  start_server.sh  test_api.sh  test_responses_api.py
examples/: simple_chat.rs
src/: lib.rs
src/api/: error.rs  handlers.rs  mod.rs  server.rs  state.rs  types.rs
src/client/: chatgpt.rs  mod.rs
src/crypto/: challenges.rs  mod.rs
src/network/: headers.rs  ip_info.rs  mod.rs
src/utils/: error.rs  helpers.rs  logger.rs  mod.rs
src/vm/: decompiler.rs  executor.rs  mod.rs  parser.rs
