[package]
name = "chatgpt_rs"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "ChatGPT reverse engineering client in Rust"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json", "cookies", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Base64 encoding
base64 = "0.22.1"

# Random number generation
rand = "0.9.2"

# Date and time
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"

# UUID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Color output
colored = "3.0.0"

# URL parsing
url = "2.5.7"

# Image processing
image = "0.25.8"

# Web server (for API)
axum = { version = "0.8.6", features = ["json", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

# Regular expressions
regex = "1.12.1"

# Hash algorithms
sha2 = "0.10.9"

# Global statics
lazy_static = "1.5.0"

[dev-dependencies]
tokio-test = "0.4.4"


[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"
